--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "@metaplex-foundation/js": "^0.18.0",
     "@solana/web3.js": "^1.73.2",
     "prettier": "^2.8.3"
+  },
+  "scripts": {
+    "start": "ts-node-esm app.ts"
   }
 }
